@@ -10,19 +10,21 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.pay.connector.events.model.payout.PayoutEvent;
 import uk.gov.pay.connector.gateway.adyen.webhook.AdyenWebhookDeserialiser;
+import uk.gov.pay.connector.gatewayaccount.model.GatewayAccountEntity;
+import uk.gov.pay.connector.gatewayaccountcredentials.service.GatewayAccountCredentialsService;
 import uk.gov.pay.connector.payout.PayoutEmitterService;
 import uk.gov.pay.connector.util.JsonObjectMapper;
 
 import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+import static uk.gov.pay.connector.gateway.PaymentGatewayName.ADYEN;
+import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccountEntityFixture.aGatewayAccountEntity;
 import static uk.gov.pay.connector.util.TestTemplateResourceLoader.ADYEN_TRANSFER_NOTIFICATION;
 import static uk.gov.pay.connector.util.TestTemplateResourceLoader.load;
 
 @ExtendWith(MockitoExtension.class)
 class AdyenTransferNotificationHandlerTest {
-
-    @Mock
-    JsonObjectMapper mapper;
     @Captor
     private ArgumentCaptor<PayoutEvent> eventArgumentCaptor;
 
@@ -32,6 +34,9 @@ class AdyenTransferNotificationHandlerTest {
     @Mock
     private PayoutEmitterService payoutEmitterService;
 
+    @Mock
+    private GatewayAccountCredentialsService gatewayAccountCredentialsService;
+
     private AdyenWebhookDeserialiser adyenWebhookDeserialiser;
 
     @Mock
@@ -40,18 +45,27 @@ class AdyenTransferNotificationHandlerTest {
     @BeforeEach
     void setUp() {
         adyenWebhookDeserialiser = new AdyenWebhookDeserialiser(new JsonObjectMapper(new ObjectMapper()));
-        handler = new AdyenTransferNotificationHandler(payoutEmitterService, adyenWebhookDeserialiser);
+        handler = new AdyenTransferNotificationHandler(payoutEmitterService, adyenWebhookDeserialiser, gatewayAccountCredentialsService);
     }
 
     @Test
     void processAdyenTransferCreatedNotification() {
-        var payload = load(ADYEN_TRANSFER_NOTIFICATION).replace("{{type}}", "balancePlatform.transfer.created");
+        String id = "balanceAccountId";
+
+        GatewayAccountEntity gatewayAccountEntity = aGatewayAccountEntity()
+                .withGatewayName(ADYEN.getName())
+                .build();
+
+        var payload = load(ADYEN_TRANSFER_NOTIFICATION).replace("{{type}}", "balancePlatform.transfer.created").replace("22222222222", id);
+
+        when(gatewayAccountCredentialsService.findGatewayAccountForCredentialKeyAndValue("balance_account_id", id))
+                .thenReturn(gatewayAccountEntity);
 
         handler.process(payload);
 
         verify(payoutEmitterService).emitPayoutEvent(eventArgumentCaptor.capture(), accountId.capture());
 
-        PayoutEvent event = eventArgumentCaptor.getAllValues().get(0);
+        PayoutEvent event = eventArgumentCaptor.getAllValues().getFirst();
         assertTrue(event.getEventType().equals("PAYOUT_CREATED"));
     }
 }
